* Make Rails 4 a supported version [sanemat]
* CyberSource: Add pinless debit card support [JoshMcKin]
* Verkkomaksut: Add item title field [kaapa]
* Add MerchantWare V4 gateway [hron]
* Eway Rapid: Add #store method [adrianmacneil]
* Barclays ePDQ Extra Plus: Use correct PROD url [ntalbott]
* Hitrust: update test & live urls [melari]

== Version 1.34.1 (June 28, 2013)

* WorldPay: Add dynamic return URL [jordanwheeler]
* Merchant One: New gateway [coteyr, melari]
* Balanced: Fix exception for invalid email [duff]
* Update supported countries for Paymill & PaymentExpress [duff]
* Worldpay: Add support for diners club [duff]
* Stripe: Include address with card data [melari]

== Version 1.34.0 (June 20, 2013)

* PayPal Express gateway: Add unstore support [duff]
* Stripe: Send application_fee with capture requests [melari]
* Make #unstore method signature consistent across gateways [duff]
* Dwolla: Major bug fixes. [capablemonkey, melari]
* Stripe: Add support for including track data [melari]

== Version 1.33.0 (May 30, 2013)

* Netaxept: Completely revamped to use the "M" service type [rbjordan3, ntalbott]
* Litle: Void authorizations via an auth reversal [jrust]
* Add RBK Money integration [england]
* Direcpay: Update test url [ashish-d]
* PayPal Express gateway: Add support for creating billing agreements [fabiokr]
* PayPal Express gateway: Add reference authorizations [fabiokr]
* Add Cardstream Modern gateway [ExxKA]
* Pin: Fix special headers [duff]
* PayPal Express gateway: Remember the billing agreement id as Response#authorization [duff]
* PayPal Express gateway: Allow an amount of 0 [duff]
* PayPal Express gateway: Reduce parameter requirements [duff]
* Quickpay integration: Update notification parser to handle API v6 [larspind]
* Sage gateway: Deprecate #credit call [duff]
* Update notification generator to better match current notification class [lulalala]
* Paymill gateway: Change .com -> .de [louiskearns]