@@ -1,4 +1,5 @@
 require 'test_helper'
+
 class RemoteNabTransactTest < Test::Unit::TestCase
 
   def setup
@@ -29,6 +30,28 @@ class RemoteNabTransactTest < Test::Unit::TestCase
     assert_equal 'Approved', response.message
   end
 
+  def test_unsuccessful_purchase_insufficient_funds
+    #Any total not ending in 00/08/11/16
+    failing_amount = 151 #Specifically tests 'Insufficient Funds'
+    assert response = @gateway.purchase(failing_amount, @credit_card, @options)
+    assert_failure response
+    assert_equal 'Insufficient Funds', response.message
+  end
+
+  def test_unsuccessful_purchase_do_not_honour
+    #Any total not ending in 00/08/11/16
+    failing_amount = 105 #Specifically tests 'do not honour'
+    assert response = @gateway.purchase(failing_amount, @credit_card, @options)
+    assert_failure response
+    assert_equal 'Do Not Honour', response.message
+  end
+
+  def test_unsuccessful_purchase_bad_credit_card
+    assert response = @gateway.purchase(@amount, @declined_card, @options)
+    assert_failure response
+    assert_equal 'Invalid Credit Card Number', response.message
+  end
+
   # Unfortunately there is no "real" way to test the dynamic card acceptor,
   # however the "Integration Guide - XML API for Payments" documentation states:
   #   If enabled on your NAB Transact account, the Dynamic Card Acceptor details
@@ -56,26 +79,75 @@ class RemoteNabTransactTest < Test::Unit::TestCase
     end
   end
 
-  def test_unsuccessful_purchase_insufficient_funds
-    #Any total not ending in 00/08/11/16
-    failing_amount = 151 #Specifically tests 'Insufficient Funds'
-    assert response = @gateway.purchase(failing_amount, @credit_card, @options)
+  def test_successful_authorize
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success response
+    assert_equal 'Approved', response.message
+  end
+
+  def test_successful_capture
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success auth
+    assert_equal 'Approved', auth.message
+
+    authorization = auth.authorization
+
+    assert capture = @gateway.capture(@amount, authorization)
+    assert_success capture
+    assert_equal 'Approved', capture.message
+  end
+
+  def test_unsuccessful_authorize_insufficient_funds
+    # amount of 151 is the test amount for "Insufficient Funds"
+    failing_amount = 151
+
+    assert response = @gateway.authorize(failing_amount, @credit_card, @options)
     assert_failure response
     assert_equal 'Insufficient Funds', response.message
   end
 
-  def test_unsuccessful_purchase_do_not_honour
-    #Any total not ending in 00/08/11/16
-    failing_amount = 105 #Specifically tests 'do not honour'
-    assert response = @gateway.purchase(failing_amount, @credit_card, @options)
+  def test_unsuccessful_authorize_do_not_honour
+    # amount of 105 for "Do Not Honour"
+    failing_amount = 105
+
+    assert response = @gateway.authorize(failing_amount, @credit_card, @options)
     assert_failure response
     assert_equal 'Do Not Honour', response.message
   end
 
-  def test_unsuccessful_purchase_bad_credit_card
-    assert response = @gateway.purchase(@amount, @declined_card, @options)
-    assert_failure response
-    assert_equal 'Invalid Credit Card Number', response.message
+  def test_unsuccessful_capture_amount_greater_than_authorized
+    assert auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success auth
+    assert_equal 'Approved', auth.message
+
+    authorization = auth.authorization
+
+    assert capture = @gateway.capture(@amount+100, authorization)
+    assert_failure capture
+    assert_equal 'Preauth was done for smaller amount', capture.message
+  end
+
+  def test_authorize_and_capture_with_card_acceptor
+    card_acceptor_options = {
+      :merchant_name => 'ActiveMerchant',
+      :merchant_location => 'Melbourne'
+    }
+    card_acceptor_options.each do |key, value|
+      options = @options.merge({key => value})
+      assert response = @gateway.authorize(@amount, @credit_card, options)
+      assert_failure response
+      assert_equal 'Permission denied', response.message
+
+      assert response = @card_acceptor_gateway.authorize(@amount, @credit_card, options)
+      assert_success response
+      assert_equal 'Approved', response.message
+
+      authorization = response.authorization
+
+      assert response = @card_acceptor_gateway.capture(@amount, authorization)
+      assert_success response
+      assert_equal 'Approved', response.message
+    end
   end
 
   def test_successful_refund
