@@ -18,7 +18,7 @@ class NabTransactTest < Test::Unit::TestCase
 
 
   def test_successful_purchase
-    @gateway.expects(:ssl_post).returns(successful_purchase_response)
+    @gateway.expects(:ssl_post).with(&check_transaction_type(:purchase)).returns(successful_purchase_response)
 
     assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_instance_of Response, response
@@ -28,8 +28,22 @@ class NabTransactTest < Test::Unit::TestCase
     assert response.test?
   end
 
+  def test_successful_authorize
+    @gateway.expects(:ssl_post).with(&check_transaction_type(:authorization)).returns(successful_authorize_response)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
+    assert_equal '009887*test*009887*200', response.authorization
+    assert response.test?
+  end
+
+  def test_successful_capture
+    @gateway.expects(:ssl_post).with(&check_transaction_type(:capture)).returns(successful_purchase_response)
+    assert response = @gateway.capture(@amount, '009887*test*009887*200')
+    assert_equal '009887*test**200', response.authorization
+    assert response.test?
+  end
+
   def test_unsuccessful_purchase
-    @gateway.expects(:ssl_post).returns(failed_purchase_response)
+    @gateway.expects(:ssl_post).with(&check_transaction_type(:purchase)).returns(failed_purchase_response)
 
     assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_instance_of Response, response
@@ -56,12 +70,12 @@ class NabTransactTest < Test::Unit::TestCase
   end
 
   def test_successful_refund
-    @gateway.expects(:ssl_post).returns(successful_refund_response)
+    @gateway.expects(:ssl_post).with(&check_transaction_type(:refund)).returns(successful_refund_response)
     assert_success @gateway.refund(@amount, "009887", {:order_id => '1'})
   end
 
   def test_failed_refund
-    @gateway.expects(:ssl_post).returns(failed_refund_response)
+    @gateway.expects(:ssl_post).with(&check_transaction_type(:refund)).returns(failed_refund_response)
 
     assert response = @gateway.refund(@amount, "009887", {:order_id => '1'})
     assert_failure response
@@ -69,6 +83,14 @@ class NabTransactTest < Test::Unit::TestCase
   end
 
   private
+
+  def check_transaction_type(type)
+    Proc.new do |endpoint, data, headers|
+      request_hash = Hash.from_xml(data)
+      request_hash['NABTransactMessage']['Payment']['TxnList']['Txn']['txnType'] == NabTransactGateway::TRANSACTIONS[type].to_s
+    end
+  end
+
 
   def failed_login_response
     '<NABTransactMessage><Status><statusCode>504</statusCode><statusDescription>Invalid merchant ID</statusDescription></Status></NABTransactMessage>'
@@ -150,6 +172,51 @@ class NabTransactTest < Test::Unit::TestCase
             <CreditCardInfo>
               <pan>444433...111</pan>
               <expiryDate>08/12</expiryDate>
+              <cardType>6</cardType>
+              <cardDescription>Visa</cardDescription>
+            </CreditCardInfo>
+          </Txn>
+        </TxnList>
+      </Payment>
+    </NABTransactMessage>
+    XML
+  end
+
+  def successful_authorize_response
+    <<-XML.gsub(/^\s{4}/,'')
+    <?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>
+    <NABTransactMessage>
+      <MessageInfo>
+        <messageID>4650de0ab4db398640b672a85e59ac</messageID>
+        <messageTimestamp>20131207164203929000+600</messageTimestamp>
+        <apiVersion>xml-4.2</apiVersion>
+      </MessageInfo>
+      <RequestType>Payment</RequestType>
+      <MerchantInfo>
+        <merchantID>XYZ0010</merchantID>
+      </MerchantInfo>
+      <Status>
+        <statusCode>000</statusCode>
+        <statusDescription>Normal</statusDescription>
+      </Status>
+      <Payment>
+        <TxnList count=\"1\">
+          <Txn ID=\"1\">
+            <txnType>10</txnType>
+            <txnSource>23</txnSource>
+            <amount>200</amount>
+            <currency>AUD</currency>
+            <purchaseOrderNo>test</purchaseOrderNo>
+            <approved>Yes</approved>
+            <responseCode>00</responseCode>
+            <responseText>Approved</responseText>
+            <settlementDate>20130712</settlementDate>
+            <txnID>009887</txnID>
+            <preauthID>009887</preauthID>
+            <authID/>
+            <CreditCardInfo>
+              <pan>444433...111</pan>
+              <expiryDate>09/14</expiryDate>
               <cardType>6</cardType>
               <cardDescription>Visa</cardDescription>
             </CreditCardInfo>
