@@ -10,6 +10,7 @@
 * Eway Rapid: Add #store method [adrianmacneil]
 * Barclays ePDQ Extra Plus: Use correct PROD url [ntalbott]
 * Hitrust: update test & live urls [melari]
+* NAB Transact: Add auth & capture support [nagash]
 
 == Version 1.34.1 (June 28, 2013)
 
